--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0; 
 }
+
+.css-uym98a-MuiImageList-root {
+  height: 500px !important;
+}
